--- a/ReciclaAe/app/src/main/res/layout/content_menu.xml
+++ b/ReciclaAe/app/src/main/res/layout/content_menu.xml
@@ -40,7 +40,8 @@
             custom:pb_colorPressed="@color/item_oleo"
             custom:pb_colorProgress="@color/item_oleo"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick" />
 
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btnPilha"
@@ -56,7 +57,8 @@
             custom:pb_colorPressed="@color/item_pilha"
             custom:pb_colorProgress="@color/item_pilha"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick"/>
 
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btnPlastico"
@@ -72,7 +74,8 @@
             custom:pb_colorPressed="@color/item_plastico"
             custom:pb_colorProgress="@color/item_plastico"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick"/>
 
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btnMetal"
@@ -88,7 +91,8 @@
             custom:pb_colorPressed="@color/item_metal"
             custom:pb_colorProgress="@color/item_metal"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick"/>
 
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btnPapel"
@@ -104,7 +108,8 @@
             custom:pb_colorPressed="@color/item_papel"
             custom:pb_colorProgress="@color/item_papel"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick"/>
 
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btnVidro"
@@ -120,7 +125,8 @@
             custom:pb_colorPressed="@color/item_vidro"
             custom:pb_colorProgress="@color/item_vidro"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick" />
 
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/btnTodos"
@@ -137,7 +143,8 @@
             custom:pb_colorPressed="@color/item_todos"
             custom:pb_colorProgress="@color/item_todos"
             custom:pb_textComplete="Pronto!"
-            custom:pb_textProgress="Carregando..." />
+            custom:pb_textProgress="Carregando..."
+            android:onClick="onClick" />
 
     </LinearLayout>
 
@@ -154,5 +161,6 @@
         android:layout_gravity="top|right"
         android:src="@drawable/ic_help"
         android:background="@android:color/transparent"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        android:onClick="onClick" />
 </FrameLayout>
