--- a/ReciclaAe/app/src/main/res/layout/content_menu.xml
+++ b/ReciclaAe/app/src/main/res/layout/content_menu.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="5dp"
-            android:text="Recicla Aê!"
+            android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="26dp" />
 
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="14dp"
-            android:text="Óleo de Cozinha"
+            android:text="@string/oleo"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             custom:pb_colorComplete="@color/item_oleo"
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="14dp"
-            android:text="Pilhas e Baterias"
+            android:text="@string/pilhas"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             custom:pb_colorComplete="@color/item_pilha"
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="14dp"
-            android:text="Plástico"
+            android:text="@string/plastico"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             custom:pb_colorComplete="@color/item_plastico"
@@ -82,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="14dp"
-            android:text="Metal"
+            android:text="@string/metal"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             custom:pb_colorComplete="@color/item_metal"
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="14dp"
-            android:text="Papel"
+            android:text="@string/papel"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             custom:pb_colorComplete="@color/item_papel"
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="14dp"
-            android:text="Vidro"
+            android:text="@string/vidro"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             custom:pb_colorComplete="@color/item_vidro"
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:padding="14dp"
-            android:text="Todos"
+            android:text="@string/todos"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             custom:pb_colorComplete="@color/item_todos"
@@ -151,7 +151,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Desenvolvido por Aron Barreira Bordin"
+        android:text="@string/by"
         android:gravity="bottom|center_horizontal"
         android:paddingBottom="5dp"/>
 
@@ -159,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imgHelp"
-        android:layout_gravity="top|right"
+        android:layout_gravity="top|end"
         android:src="@drawable/ic_help"
         android:background="@android:color/transparent"
         android:padding="5dp"
