--- a/ReciclaAe/app/src/main/res/layout/activity_maps.xml
+++ b/ReciclaAe/app/src/main/res/layout/activity_maps.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/map"
-    tools:context="com.aronbordin.reciclaae.MapsActivity"
+    tools:context="com.aronbordin.reciclae.MapsActivity"
     android:name="com.google.android.gms.maps.SupportMapFragment" />
